@@ -29,7 +29,7 @@
 #include <string>
 static const char *TAG = "v-vweup";
 
-#define VERSION "0.19.4"
+#define VERSION "0.20.1"
 
 #include <stdio.h>
 #include <string>
